--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bananagen-ai",
+  "name": "timeweb-deployment-check",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "@google/genai": "^1.30.0",
+    "lucide-react": "^0.554.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
